Closed Bug 1543312 Opened 6 years ago Closed 6 years ago

caret and characters insertion are erratic in a contenteditable with tinyMCE on Android

Categories

(Core :: DOM: Editor, defect, P3)

63 Branch
Unspecified
Android
defect

Tracking

()

RESOLVED FIXED
mozilla70
Webcompat Priority ?
Tracking Status
firefox-esr68 --- wontfix
firefox66 --- wontfix
firefox67 --- wontfix
firefox68 --- wontfix
firefox69 --- wontfix
firefox70 --- fixed

People

(Reporter: karlcow, Assigned: m_kato)

References

()

Details

(Whiteboard: [webcompat][geckoview])

Attachments

(2 files)

This is https://webcompat.com/issues/17764

  1. With Firefox 68 Nightly on Android
  2. Go to https://minecraft.curseforge.com/projects/better-builders-wands
  3. sign in (top right menu. Creating an account with twitch is free)
  4. scroll down the page until reaching the comment section.
  5. click on Reply on one of the comment.
  6. Notice that the caret is set automatically on the line after the In reply to…
  7. Request the focus to get the keyboard
  8. Type a couple of characters

Expected:
The text is added like in Chrome on Android.

Actual:
The caret is jumping to the first character of the first line.
Any subsequent character input happens in random order.

This is NOT reproducible on

  • Chrome Android,
  • Firefox Desktop,
  • Firefox Desktop + Firefox Android UA + RDM.
Flags: webcompat?

I guess that GeckoEditable doesn't insert text to valid position. This is GeckoEditable in Android, not editor issue.

Component: Editor → Keyboards and IME
Product: Core → Firefox for Android
Version: 63 Branch → Firefox 63

Migrating Webcompat whiteboard priorities to project flags. See bug 1547409.

Webcompat Priority: --- → ?

See bug 1547409. Migrating whiteboard priority tags to program flags.

This might not Android issue. GekocEditable listens selection change via editor, but no received. When debugging desktop too, selection change isn't fired to widget. Root cause is editor? But I cannot create easy test case yet...

Attached file sample
Assignee: nobody → m_kato

After editor is attached, if pres shell is re-created, this issue occurs. editor already attaches to selection, but selection is re-created by new pres shell. So editor must attach new selection. (or tear down editor on destroying pres shell)

Component: Keyboards and IME → Editor
Product: Firefox for Android → Core
Whiteboard: [webcompat] → [webcompat][geckoview]
Version: Firefox 63 → 63 Branch
Pushed by m_kato@ga2.so-net.ne.jp: https://hg.mozilla.org/integration/autoland/rev/66e8aafac348 Tear down editor when PresShell is destroyed. r=masayuki
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla70

I think we can let this ride the trains given that it's not a new issue.

Flags: in-testsuite+
Regressions: 1574596
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: